upgrade versions of everything and fix deprecations and support encrypted streams